--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -39,9 +39,6 @@ body.subwindow:not(.sidecar-is-minimized) .left-tab-stripe {
     -webkit-app-region: drag;
     transition: background-color 300ms ease-in-out;
 }
-body.os-darwin .left-tab-stripe {
-    padding-top: 2em;
-}
 
 .left-tab-stripe-buttons {
     flex: 1;
@@ -64,11 +61,11 @@ body.os-darwin .left-tab-stripe {
 .left-tab-stripe-bottom-buttons .left-tab-stripe-button {
     margin: 1.375em 0;
 }
-.left-tab-stripe-button:not([data-tab-button-index]):hover i {
+.left-tab-stripe-button:not([data-tab-button-index]) i {
     color: rgba(255,255,255,0.5) !important;
 }
-.left-tab-stripe-button:not([data-tab-button-index]) i {
-    color: rgba(255,255,255,0.25) !important;
+.left-tab-stripe-button.smaller-button:hover i {
+    color: var(--color-base06) !important;
 }
 .left-tab-stripe-button:not([data-tab-button-index]):not([data-balloon]):after {
     content: ''
@@ -140,9 +137,6 @@ body[kui-theme-style="light"] .left-tab-stripe-buttons .left-tab-stripe-button i
 }
 .left-tab-stripe-bottom-buttons i {
     filter: grayscale(0.5);
-}
-.left-tab-stripe-button:not(.left-tab-stripe-button-selected):hover i {
-    filter: none;
 }
 .left-tab-stripe-button-selected {
     color: var(--color-text-01)
@@ -224,8 +218,6 @@ body.subwindow .repl .horizontal-landing-zone {
 
 body.os-darwin .left-tab-stripe {
     padding-left: calc(78px + 1em);
-    padding-top: 0;
-    flex-basis: auto;
 }
 
 .main {
@@ -236,6 +228,8 @@ body.os-darwin .left-tab-stripe {
     height: 36px;
     flex-direction: row;
     padding: 0;
+    padding-left: 1em;
+    flex-basis: auto;
 }
 
 .left-tab-stripe-buttons {
@@ -317,6 +311,7 @@ body.os-darwin .left-tab-stripe {
 }
 
 .left-tab-stripe-bottom-buttons {
+    padding-right: 0.5em;
     display: flex;
     border-left: 1px inset var(--color-base02);
 }
@@ -324,7 +319,8 @@ body.os-darwin .left-tab-stripe {
 .left-tab-stripe-bottom-buttons .left-tab-stripe-button {
     margin: 0;
     min-width: unset;
-    padding: 0 0.5em;
+    padding: 0;
+    padding-left: 0.5em;
     background: none;
     justify-content: center;
 }
@@ -335,7 +331,6 @@ body.os-darwin .left-tab-stripe {
 
 .left-tab-stripe-button.smaller-button i {
     font-size: 1.25em;
-    color: var(--color-base06) !important;
     filter: none !important;
 }
 
