feat(packages/app): show cwd in prompt
plus a few other minor refinements

Fixes #1727

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -71,7 +71,7 @@
 	<div class="repl-inner zoomable">
 	  <div class="repl-block repl-initial" data-base-class="repl-block" data-input-count="0">
 	    <div class="repl-input">
-	      <div class="repl-prompt"><span class='repl-prompt-lefty'></span><span class='repl-context clickable'>/wsk/actions</span><span class='repl-selection clickable' title='The current selection'></span><span class='repl-prompt-righty'><i class="fas fa-angle-right"></i></span></div>
+	      <div class="repl-prompt"><span class='repl-prompt-lefty'></span><span class='repl-context clickable'></span><span class='repl-selection clickable' title='The current selection'></span><span class='repl-prompt-righty'><i class="fas fa-angle-right"></i></span></div>
 	      <input type="text"
                      class="repl-input-element"
                      autofocus
