--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -35,6 +35,9 @@ body a:hover:not(.plain-anchor) {
 }
 
 /* HEADER */
+body.still-loading .left-tab-stripe {
+    display: none;
+}
 body .page > .header {
     /* only allow mouse dragging on top-most header */
     -webkit-app-region: drag;
@@ -288,12 +291,14 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
 .repl-prompt .repl-selection.has-selection-true {
     margin-left: 1ex;
 }
-.repl-context {
-    display: none;
-    font-size: 0.75em;
-    margin-right: 0.1875em;
+.repl-prompt-righty {
+    display: flex;
 }
-repl .repl-block.using-custom-prompt .repl-prompt-righty > i {
+.repl-context {
+    font-size: 0.875em;
+    font-weight: 500;
+}
+repl .repl-block.using-custom-prompt .repl-prompt-righty > i, repl .repl-block.using-custom-prompt .repl-context {
     display: none;
 }
 repl .repl-block.using-custom-prompt .repl-input input {
@@ -313,20 +318,25 @@ repl .repl-block.using-custom-prompt .repl-input input {
     flex: 0;
     white-space: nowrap;
 }
-.repl-prompt-right-elements .repl-prompt-right-element-icon {
-    margin-left: 1ex;
-    color: var(--color-processing);
-    font-size: 1.5em; /* see the comment for repl-input re: min-height; that should match this */
+.repl .repl-prompt-right-element-icon.deemphasize {
+    margin-left: 0.5em;
+    color: transparent;
+    font-size: 0.875em; /* see the comment for repl-input re: min-height; that should match this */
     transition: all 300ms ease-in-out;
+}
+.repl-block.processing .repl-prompt-right-element-icon {
+    color: var(--color-processing);
 }
 .repl-prompt-right-elements .repl-prompt-right-element-icon:hover {
     cursor: pointer;
     opacity: 1;
 }
-.repl-block.valid-response .repl-prompt-right-elements .repl-prompt-right-element-icon {
+.repl-block.valid-response .repl-prompt-right-element-icon {
+    display: block;
     color: var(--color-ok);
 }
-.repl-block.error .repl-prompt-right-elements .repl-prompt-right-element-icon {
+.repl-block.error .repl-prompt-right-element-icon {
+    display: block;
     color: var(--color-error);
 }
 repl.sidecar-visible .repl-block:not(.processing) .repl-prompt-right-elements, .repl-active .repl-prompt-right-elements {
@@ -389,7 +399,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 }
 .repl-input {
     align-items: center;
-    min-height: 1.5em; /* so that when the sidecar is open (and the right-elements are display:none) we don't get a height adjustment */
+    min-height: 1em; /* so that when the sidecar is open (and the right-elements are display:none) we don't get a height adjustment */
 }
 .repl-input, .repl-output {
     display: flex
@@ -2152,6 +2162,7 @@ body:not(.oops-total-catastrophe) #restart-needed-warning {
     color: var(--color-base08);
 }
 #restart-needed-warning .restart-needed-warning-content {
+    color: var(--color-base06);
     font-size: 3vw;
     padding: 5vmin;
 }
