feat: tab close button
Fixes #1739

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -52,6 +52,7 @@
           <div class='left-tab-stripe-button left-tab-stripe-button-selected' data-tab-button-index='1'>
             <i class='fas fa-square repl-prompt-right-element-icon deemphasize'></i>
             <div class='left-tab-stripe-button-label'>&nbsp;</div>
+            <div class='left-tab-stripe-button-closer'>&#xd7;</div>
           </div>
         </div>
         <div class='left-tab-stripe-bottom-buttons'>
