--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -58,7 +58,7 @@ body.subwindow:not(.sidecar-is-minimized) .left-tab-stripe {
     content: ''
 }
 .left-tab-stripe-buttons .left-tab-stripe-button:not(.left-tab-stripe-button-selected) {
-    filter: blur(0.5px) grayscale(0.75) brightness(0.75);
+    background: transparent;
 }
 .left-tab-stripe-button i {
     display: flex;
@@ -116,6 +116,15 @@ body.subwindow:not(.sidecar-is-minimized) .left-tab-stripe {
 .left-tab-stripe-buttons .left-tab-stripe-button .left-tab-stripe-button-closer:hover {
     background: var(--color-ui-04);
     color: var(--color-text-02);
+}
+.left-tab-stripe-buttons .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-closer:hover {
+    /* modify the background hover effect for not-selected tabs */
+    background: var(--color-base02);
+    color: var(--color-text-01);
+    opacity: 0.8;
+}
+body[kui-theme-style="dark"] .left-tab-stripe-buttons .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-closer:hover {
+    background: var(--color-base01);
 }
 
 .left-tab-stripe-button.smaller-button i {
@@ -226,7 +235,6 @@ body.os-darwin .left-tab-stripe {
 
 .left-tab-stripe-buttons {
     display: flex;
-    padding-top: 8px;
 }
 
 .left-tab-stripe-button {
@@ -234,34 +242,39 @@ body.os-darwin .left-tab-stripe {
     display: flex;
     color: var(--color-text-01);
     opacity: 1;
-    transition: color 600ms ease-in-out, opacity 300ms ease-in-out;
     align-items: center;
     justify-content: center;
     background: var(--color-base02);
     min-width: 8em;
     margin: 0;
-    border-radius: 4px / 6px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
     border: 1px solid transparent;
-    border-top: none;
     border-bottom: none;
-}
-
-.left-tab-stripe-buttons .left-tab-stripe-button:not(.left-tab-stripe-button-selected) {
-    /* bottom shadow for not-selected tabs */
-    border-bottom: 1px solid var(--color-base01);
+    border-top: 2px solid transparent;
 }
 
 .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-label {
     /* make not-selected tabs a bit more visible */
-    color: var(--color-text-01);
+    color: var(--color-base02);
+
+    border-left: 1px inset transparent;
+    border-right: 1px inset transparent;
+    transition: color 150ms ease-in-out;
+}
+body[kui-theme-style="dark"] .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-label {
+    color: var(--color-text-02);
+}
+
+.left-tab-stripe-button:not(.left-tab-stripe-button-selected) + .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-label, .left-tab-stripe-button:not(.left-tab-stripe-button-selected):first-child .left-tab-stripe-button-label {
+    border-left-color: var(--color-base02);
+}
+.left-tab-stripe-button:not(.left-tab-stripe-button-selected):last-child .left-tab-stripe-button-label {
+    border-right-color: var(--color-base02);
 }
 
 .left-tab-stripe-button-selected {
     background: var(--color-ui-01);
     border-color: var(--color-base03);
-    box-shadow: 0 0 2px var(--color-base01);
+    border-top-color: var(--color-content-divider);
 }
 
 .left-tab-stripe-button > i {
@@ -274,7 +287,7 @@ body.os-darwin .left-tab-stripe {
 
 .left-tab-stripe-button-label {
     flex: 1;
-    padding: 0 1.25em 0 1em;
+    padding: 0.375em 1.25em 0.375em 1em;
     font-weight: 500;
     direction: unset;
     max-width: 25em;
