fix(packages/app): move new tab button to the right of the right-most tab
Fixes #1777

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -56,8 +56,8 @@
           </div>
         </div>
         <div class='left-tab-stripe-bottom-buttons'>
-          <div class='left-tab-stripe-button new-tab-button smaller-button' id='new-tab-button' data-balloon-disabled='Open a new tab' data-balloon-pos='right' data-balloon-length='fit'>
-            <i class='repl-prompt-right-element-icon deemphasize'>&#xFF0B;</i>
+          <div class='left-tab-stripe-button smaller-button' id='new-tab-button' data-balloon-disabled='Open a new tab' data-balloon-pos='right' data-balloon-length='fit'>
+            <i class='repl-prompt-right-element-icon deemphasize new-tab-button'>&#xFF0B;</i>
           </div>
           <div class='left-tab-stripe-button smaller-button' id='help-button'>
             <i class='fas fa-question-circle'></i>
