--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -477,7 +477,6 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 }
 .entity-attributes {
     display: table-row;
-    height: 3em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -504,7 +503,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 .entity-attributes > span {
     display: table-cell;
     vertical-align: middle;
-    padding: 0 0.375em;
+    padding: 0.6875em 0.375em;
     border-top: 1px solid var(--color-ui-04);
     transition: all 300ms ease-in-out;
     overflow: hidden;
